--- a/sim/vcs_warn.config
+++ b/sim/vcs_warn.config
@@ -10,3 +10,11 @@
     +lint=none;
     +file=../../hvl/common/rvfimon.v;
 }
+{
+    +lint=none;
+    +module=DW02_mult;
+}
+{
+    +lint=none;
+    +module=DW_div;
+}
