--- a/sim/xprop.config
+++ b/sim/xprop.config
@@ -1,3 +1,5 @@
 merge=tmerge;
 xindex_select_method=resolution;
 instance {top_tb.dut} {xpropOn};
+module {DW02_mult} {xpropOff};
+module {DW_div} {xpropOff};
